# django-project

./: .gitignore  LICENSE  pyproject.toml
api/migrations/: 0001_initial.py
backend/: settings.py  urls.py  views.py
backend/api/: models.py  schema.py
backend/api/migrations/: 0002_userimage.py
frontend/: package-lock.json
frontend/src/: ApolloProvider.js  App.js
frontend/src/pages/: LoginPage.css  LoginPage.js  UploadPage.css  UploadPage.js
